fix: fix slider container overflow

--- a/christmas-shop/src/components/section-slider/section-slider.scss
+++ b/christmas-shop/src/components/section-slider/section-slider.scss
@@ -5,7 +5,7 @@
   color: $color-static-white;
 
   &__container {
-    overflow: hidden;
+    overflow-x: hidden;
     padding-block: 60px;
   }
 
